# dtc

./: .travis.yml  Makefile  README  meson.build  meson_options.txt
libfdt/: meson.build
pylibfdt/: Makefile.pylibfdt  setup.py
tests/: meson.build  run_tests.sh
